tetrate/tis1002/e2e/bad-resource-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: namespace-sidecar-with-selector
  namespace: default
spec:
  workloadSelector:
    labels:
      app: my-app
  egress:
  - hosts:
    - "*/*"
