tetrate/tis1002/e2e/good-resource-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: specific-sidecar
  namespace: default
spec:
  workloadSelector:
    labels:
      app: specific-app
  egress:
  - hosts:
    - "external-service.com/*"
