tetrate/tis1002/e2e/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: global-sidecar-without-selector
  namespace: istio-system
spec:
  egress:
  - hosts:
    - "*/*"
