tetrate/tis1002/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-global-sidecar-configuration
spec:
  validationFailureAction: Enforce
